[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/Screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/Background/GameBackground.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.533333, 0.533333, 0.533333, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.431373, 0.431373, 0.431373, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="CenterPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -290.0
margin_right = 320.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 21.0
margin_right = 640.0
margin_bottom = 59.0
alignment = 1

[node name="Label" type="Label" parent="CenterPanel/VBoxContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 352.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Имя"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 75.0
margin_right = 640.0
margin_bottom = 115.0
alignment = 1

[node name="NameEdit" type="LineEdit" parent="CenterPanel/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 131.0
margin_right = 640.0
margin_bottom = 169.0
alignment = 1

[node name="Label" type="Label" parent="CenterPanel/VBoxContainer/HBoxContainer3"]
margin_left = 305.0
margin_right = 335.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP"
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 185.0
margin_right = 640.0
margin_bottom = 225.0
alignment = 1

[node name="IPEdit" type="LineEdit" parent="CenterPanel/VBoxContainer/HBoxContainer4"]
margin_left = 120.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "localhost"
align = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 241.0
margin_right = 640.0
margin_bottom = 279.0
alignment = 1

[node name="Label" type="Label" parent="CenterPanel/VBoxContainer/HBoxContainer5"]
margin_left = 266.0
margin_right = 374.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Сессия"
align = 1
valign = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 295.0
margin_right = 640.0
margin_bottom = 335.0
alignment = 1

[node name="SessionEdit" type="LineEdit" parent="CenterPanel/VBoxContainer/HBoxContainer6"]
margin_left = 120.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 351.0
margin_right = 640.0
margin_bottom = 389.0
alignment = 1

[node name="Label" type="Label" parent="CenterPanel/VBoxContainer/HBoxContainer7"]
margin_left = 180.0
margin_right = 460.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Начальная секция"
align = 1
valign = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 405.0
margin_right = 640.0
margin_bottom = 442.0
custom_constants/separation = 40
alignment = 1

[node name="CheckBox1" type="CheckBox" parent="CenterPanel/VBoxContainer/HBoxContainer8"]
margin_left = 115.0
margin_right = 227.0
margin_bottom = 37.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Первая"

[node name="CheckBox2" type="CheckBox" parent="CenterPanel/VBoxContainer/HBoxContainer8"]
margin_left = 267.0
margin_right = 376.0
margin_bottom = 37.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Вторая"

[node name="CheckBox3" type="CheckBox" parent="CenterPanel/VBoxContainer/HBoxContainer8"]
margin_left = 416.0
margin_right = 524.0
margin_bottom = 37.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Третья"

[node name="HBoxContainer9" type="HBoxContainer" parent="CenterPanel/VBoxContainer"]
margin_top = 458.0
margin_right = 640.0
margin_bottom = 518.0
custom_constants/separation = 40
alignment = 1

[node name="PlayButton" type="Button" parent="CenterPanel/VBoxContainer/HBoxContainer9"]
margin_left = 120.0
margin_right = 520.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Создать игру"

[connection signal="text_changed" from="CenterPanel/VBoxContainer/HBoxContainer6/SessionEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="toggled" from="CenterPanel/VBoxContainer/HBoxContainer8/CheckBox1" to="." method="_on_CheckBox1_toggled"]
[connection signal="toggled" from="CenterPanel/VBoxContainer/HBoxContainer8/CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="toggled" from="CenterPanel/VBoxContainer/HBoxContainer8/CheckBox3" to="." method="_on_CheckBox3_toggled"]
[connection signal="pressed" from="CenterPanel/VBoxContainer/HBoxContainer9/PlayButton" to="." method="_on_PlayButton_pressed"]
